# the-invisible-boy-manuscript

./: .gitignore  00_MASTER_CONTROL  01_CANON  02_MANUSCRIPT  03_VERIFICATION  04_REFERENCE  05_ARCHIVE  CANON_LOCKS.md  CHANGELOG.md  QUICKSTART.md  README.md  REPOSITORY_RULES.md  SETUP.md  modulatio-init.sh  pyproject.toml  setup.sh
00_MASTER_CONTROL/: AI_ROLES.md  CANON_LOCKS.md  CHANGELOG.md  CHATGPT_ARCHITECTURE_ENFORCEMENT.md  MODULATIO_CONFIG.md  README.md  REPOSITORY_RULES.md
01_CANON/: README.md
01_CANON/CHARACTERS/: README.md
01_CANON/LOCATIONS/: README.md
01_CANON/RELATIONSHIPS/: README.md
01_CANON/RULES/: README.md
01_CANON/TERMINOLOGY/: README.md
01_CANON/TIMELINE.md/: README.md
02_MANUSCRIPT/: README.md
02_MANUSCRIPT/LOCKED/: README.md
02_MANUSCRIPT/RECONCILIATION/: README.md
02_MANUSCRIPT/WORKING_CHATGPT/: README.md
02_MANUSCRIPT/WORKING_CLAUDE/: README.md
02_MANUSCRIPT/WORKING_GROK/: README.md
02_WRITING_TOOLS/: TEST_WRITE.md
03_VERIFICATION/: README.md  RECONCILIATION_REPORT_TEMPLATE.md  manuscript_reconciliation_engine.py
04_REFERENCE/: AI_COORDINATION_HANDOFF.md  README.md
04_REFERENCE/PERPLEXITY_RESEARCH/: README.md
05_ARCHIVE/: README.md
O2_MANUSCRIPT/: README.md
O2_MANUSCRIPT/LOCKED/: README.md
O2_MANUSCRIPT/RECONCILIATION/: README.md
O2_MANUSCRIPT/WORKING_CHATGPT/: README.md
O2_MANUSCRIPT/WORKING_CLAUDE/: README.md
